opam-version: "2.0"
maintainer: "david-engelmann david.engelmann44@gmail.com"
authors: "david-engelmann david.engelmann44@gmail.com"
homepage: "https://github.com/david-engelmann/libsql-client-ocaml"

bug-reports: "https://github.com/david-engelmann/libsql-client-ocaml/issues"
dev-repo: "git+https://github.com/david-engelmann/libsql-client-ocaml.git"
license: "MIT"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "ocaml" {>= "4.14.0"}
    "core"
    "async"
    "dune" {>= "2.0.0"}
    ]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OCaml-based tools for libSQL"
description: "
OCaml-based tools for libSQL 

You can create a .env file with the minimum one variable
- AUTH_TOKEN : your.token.here 
    - Add your libSQL auth token for Bearer Authentication
"
