(include_subdirs unqualified)
(library
 (name libsql)
 (libraries async core uri cohttp cohttp-lwt-unix cohttp-async httpaf httpaf-lwt-unix ssl sqlite3 jose js_of_ocaml-compiler lwt_ssl lwt)
 (preprocess (pps ppx_jane))
 (modules Auth Cohttp_client Hrana Path Url Sqlite))
 
;;(executable (name libsql))
;;            (modes byte exe))
