(tests
 ; multiple test files
 ; (names test_sample test_resample)

 ; single test file
 (names test_auth)

 (libraries async core uri cohttp cohttp-lwt-unix cohttp-async httpaf httpaf-lwt-unix ssl jose lwt_ssl lwt ounit2 libsql)

 ; multiple test files
 ; (modules test_sample test_resample)

 ; single test file
 (modules test_auth))

