(tests
 ; multiple test files
 (names test_auth test_hrana test_path test_sqlite test_url)

 (libraries async core uri cohttp cohttp-lwt-unix cohttp-async httpaf httpaf-lwt-unix ssl jose lwt_ssl lwt alcotest libsql)

 ; multiple test files
 (modules test_auth test_hrana test_path test_sqlite test_url))

